src/containers/home/news-section/style.css
.home__container .news__container {
  width: 990px;
  margin: 70px auto 0;
  padding-bottom: 110px;
}
.home__container .news__title {
  margin-bottom: 60px;
}
.home__container .news__list {
  margin-left: 56px;
}
.home__container .news__item {
  display: flex;
  flex-wrap: wrap;
  height: 26px;
  line-height: 26px;
  font-size: 18px;
  margin: 20px 0;
}
.home__container .news__time {
  background: #43a2b4;
  color: white;
  padding: 0 0.5em;
  height: 100%;
}
.home__container .news__content {
  margin: 0 0 0 46px;
  width: 770px;
}
.home__container .news__text {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.home__container .news__text:hover {
  color: #43a2b4;
}
.home__container .news__item:not(:last-child) .news__content::after {
  content: '';
  display: block;
  height: 1px;
  margin: 10px auto;
  width: 80%;
  background: linear-gradient(to right, #EDEDED, #95C7D3 30%, #95C7D3 70%, #EDEDED);
}

